--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -1,41 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>Kontore.Extensions</PackageId>
-    <Authors>tigerros</Authors>
-    <Product>Kontore.Extensions</Product>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <RepositoryUrl>https://github.com/Kontore/Extensions</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Description>A collection of minor auxiliary extension methods. These are mostly just the extension methods I end up using in another project.</Description>
-    <Version>1.0.0</Version>
-    <RootNamespace>Tigerros.Extensions</RootNamespace>
-    <PackageReleaseNotes></PackageReleaseNotes>
-    <Company>Kontore</Company>
-    <NeutralLanguage>en-US</NeutralLanguage>
-    <PackageIcon>StralsundCityHall_512x512.jpg</PackageIcon>
-    <PackageIconUrl />
+	<TargetFramework>netstandard2.0</TargetFramework>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<PackageId>Kontore.Extensions</PackageId>
+	<Authors>tigerros</Authors>
+	<Product>Kontore.Extensions</Product>
+	<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+	<RepositoryUrl>https://github.com/Kontore/Extensions</RepositoryUrl>
+	<RepositoryType>git</RepositoryType>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<Description>A collection of minor auxiliary extension methods. These are mostly just the extension methods I end up using in another project.</Description>
+	<Version>1.0.1</Version>
+	<RootNamespace>Kontore.Extensions</RootNamespace>
+	<PackageReleaseNotes>Fixed namespace names</PackageReleaseNotes>
+	<Company>Kontore</Company>
+	<NeutralLanguage>en-US</NeutralLanguage>
+	<PackageIcon>StralsundCityHall_512x512.jpg</PackageIcon>
+	<AssemblyName>Kontore.Extensions</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-     <Optimize>true</Optimize>
+	 <Optimize>true</Optimize>
 	 <GenerateDocumentationFile>true</GenerateDocumentationFile> <!-- This is required for NuGet package documentation -->
   </PropertyGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+	<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <None Include="..\..\About\Images\StralsundCityHall_512x512.jpg">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+	<None Include="..\..\About\Images\StralsundCityHall_512x512.jpg">
+	  <Pack>True</Pack>
+	  <PackagePath></PackagePath>
+	</None>
   </ItemGroup>
 
 </Project>
