--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -15,10 +15,11 @@
 	<RootNamespace>Kontore.Extensions</RootNamespace>
 	<PackageReleaseNotes>Fixed namespace names</PackageReleaseNotes>
 	<Company>Kontore</Company>
-	<NeutralLanguage>en-US</NeutralLanguage>
-	<PackageIcon>StralsundCityHall_512x512.jpg</PackageIcon>
+	<NeutralLanguage>en</NeutralLanguage>
 	<AssemblyName>Kontore.Extensions</AssemblyName>
 	<PackageProjectUrl>https://github.com/Kontore/Extensions</PackageProjectUrl>
+	<PackageIcon>StralsundCityHall_512x512.jpg</PackageIcon>
+	<PackageIconUrl />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -33,10 +34,10 @@
 
 
   <ItemGroup>
-	<None Include="..\..\About\Images\StralsundCityHall_512x512.jpg">
-	  <Pack>True</Pack>
-	  <PackagePath></PackagePath>
-	</None>
+    <None Include="..\StralsundCityHall_512x512.jpg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
