--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Generate Packages
-      run: dotnet pack -c Release -o out --configuration Release
+      run: dotnet pack -c Release -o out
     - name: Publish to NuGet
       run: dotnet nuget push "**/*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
     - name: Publish to GitHub
