--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,9 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  Build:
-    runs-on: windows-latest
+  Build-and-Test:
+    name: Build and Test
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
